ecmascript/parser/tests/test262-error-references/fail/862fa3d5f7a928be.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/862fa3d5f7a928be.js:1:5
  |
1 | var if = 0
  |     ^^

